Downgraded to java 17